--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+#root {
+  background-color: darkslateblue;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+main {
+  text-align: center;
+  max-width: 500px;
+    width: 100%;
+    border-radius: 10px;
+    margin: auto;
+
+}
+
+
+.game-container {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.game-title {
   color: white;
+  font-size: 40px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.die {
+  width: 70px;
+  height: 70px;
+  border-radius: 7px;
+  margin: 10px auto;
+  display: flex;
+}
+.die-number {
+  margin: auto;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-container {
+  display: block;
+}
+.button{
+  height: fit-content;
+  padding: 20px 40px;
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  margin: 20px auto;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.button-back {
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.game-board {
+  border: 2px solid white;
+  border-radius: 10px;
+  margin: 10px auto;
+  color: white;
+  border-bottom: 2px solid white;
+  width: 300px;
+}
+
+.game-board h1 {
+  margin: 20px auto;
+  padding: 0;
+  width: 250px;
+}
+
+
+
+.game-list {
+  display: flex;
+  border-top: 1px solid;
+  align-items: center;
+}
+.game-list h2 {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.seconds {
+  font-size: 12px;
+}
+
+.start-screen {
+  background-color: darkslateblue;
+  height: 100vh;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  justify-content: center;
+}
+
+.start-title, .start-description {
+  margin: 0 auto;
+}
+
+.dice-emoji {
+font-size: 100px;
+margin: 0 auto;
+line-height: 0.8;
+}
+
+.start-title {
+  font-size: 100px;
+  line-height: 1;
+}
+
+h2 {
+  margin: 0 auto;
+  font-size: 22px;
+}
+
+.start-button {
+  margin: 30px auto;
+  height: fit-content;
+  padding: 20px 40px;
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+button:hover {
+  background-color: midnightblue;
 }
